--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-source-filesystem": "^2.1.3",
     "gatsby-transformer-sharp": "^2.2.1",
     "load-google-maps-api": "^2.0.0",
+    "promised-location": "^1.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
