--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
-    "reactstrap": "^8.0.1"
+    "reactstrap": "^8.0.1",
+    "utils-copy": "^1.1.1"
   },
   "devDependencies": {
     "husky": "^3.0.0",
